<resources>
    <string name="app_name">Reto1_Panaderia</string>
    <string name="contrasena">Contraseña</string>
    <string name="inicio_de_sesion">Inicia sesión</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="confirma_contrasena">Confirmar contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="olvidaste_tu_usuario">¿Olvidaste tu usuario?</string>
    <string name="registro">Regístrate</string>
    <string name="o">- O -</string>
    <string name="acepto_t_rminos_y_condiciones">Acepto términos y condiciones</string>
    <string name="acepto_pol_tica_para_tratamientos_de_datos">Acepto política para tratamientos de datos</string>
</resources>